tests/golden/params/argocd/argocd/30_argocd/20_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    name: argocd-allow-same-namespace
  name: argocd-allow-same-namespace
  namespace: syn
spec:
  ingress:
    - from:
        - podSelector: {}
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    name: argocd-allow-whitelisted-namespaces
  name: argocd-allow-whitelisted-namespaces
  namespace: syn
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: syn-infra-monitoring
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: additional-namespace
  podSelector: {}
  policyTypes:
    - Ingress
